--- a/views/alterar.ejs
+++ b/views/alterar.ejs
@@ -69,7 +69,7 @@
 
     <p><%=atividades%></p>
     <p><%=atividades.data.toString().slice(0,10)%></p>
-    <p><%=atividades.data.getFullYear()%>-<%=atividades.data.getMonth()+1  %>-<%=atividades.data.getDate()+ 1%></p>
+    <p><%=atividades.data.getFullYear()%>-<%=atividades.data.getMonth()+1  %>-<%=atividades.data.getDate()%></p>
 
 </body>
 </html>
